--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,489 @@
-h1{
-    color: black;
-    font-style: italic;
-}
+@font-face {
+    font-family: "Open Sans";
+    font-weight: 400;
+    font-style: normal;
+    src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff);
+  }
+  
+  @font-face {
+    font-family: "Open Sans";
+    font-weight: 700;
+    font-style: normal;
+    src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff);
+  }
+  
+  body {
+    margin: 0;
+    font-family: "Open Sans", Arial, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+    line-height: 1.46;
+  }
+  
+  .container {
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+  }
+  
+  /* header */
+  
+  .header {
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-color: #000000;
+    color: #ffffff;
+    position: relative;
+    box-sizing: border-box;
+    padding-top: 35px;
+    padding-bottom: 100px;
+    min-width: 1200px;
+  }
+  
+  .header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000000;
+    opacity: 0.5;
+  }
+  
+  .header-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nav-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-link {
+    color: #ffffff;
+    text-decoration: none;
+  }
+  
+  .nav-item {
+    font-size: 13px;
+    line-height: 1.2;
+    text-transform: uppercase;
+  }
+  
+  .nav-item:not(:first-child) {
+    margin-left: 35px;
+  }
+  
+  .header-title-container {
+    width: 700px;
+    text-align: center;
+    margin: 30px auto;
+  }
+  
+  .header-title {
+    text-transform: uppercase;
+    font-size: 45px;
+    line-height: 1.667;
+    margin: 0 0 30px;
+  }
+  
+  .header-title:last-child {
+    margin-bottom: 0;
+  }
+  
+  .logo {
+    width: 180px;
+  }
+  
+  /*------------------------------------------------------*/
+  .page-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 64px;
+  }
+  
+  .main {
+    width: 778px;
+  }
+  
+  /* боковая панель */
+  
+  .sidebar {
+    width: 272px;
+  }
+  
+  .sidebar-block:nth-child(n + 2) {
+    margin-top: 50px;
+  }
+  
+  .sidebar-title {
+    font-size: 14px;
+    color: #000000;
+    line-height: 18px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    margin: 0 0 30px;
+  }
+  
+  .sidebar-title-link {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .sidebar-title::after {
+    content: "";
+    display: block;
+    background-color: #e1d9bd;
+    width: 65px;
+    height: 3px;
+    margin: 15px auto 0;
+  }
+  
+  .sidebar-post {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+  
+  .sidebar-post:nth-child(n + 2) {
+    margin-top: 20px;
+  }
+  
+  .sidebar-title-post {
+    font-size: 14px;
+    color: #000000;
+    line-height: 1.28;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 0;
+  }
+  
+  .sidebar-title-post-link {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .sidebar-img-container {
+    max-width: 70px;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .sidebar-img {
+    width: 70px;
+  }
+  
+  .sidebar-meta {
+    font-size: 12px;
+    line-height: 1.2;
+    color: #a9a9a9;
+  }
+  
+  .search-form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    vertical-align: middle;
+  }
+  
+  .sidebar-field {
+    box-sizing: border-box;
+    border: none;
+    height: 49px;
+    margin: 0;
+    background-color: #f4f7f6;
+    padding-left: 20px;
+    padding-right: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+  
+  .sidebar-button {
+    width: 100%;
+    height: 49px;
+    background-color: #b59f5b;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center center;
+    border: none;
+  }
+  
+  .search-field {
+    width: 220px;
+  }
+  
+  .search-button {
+    max-width: 49px;
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center center;
+  }
+  
+  .search-field:focus {
+    border-color: silver;
+  }
+  
+  .visually-hidden {
+    width: 1px;
+    height: 1px;
+    clip: rect(1px, 1px, 1px, 1px);
+    position: absolute;
+  }
+  
+  .subscribe-form {
+    display: flex;
+    flex-direction: column;
+    vertical-align: middle;
+  }
+  
+  .subscribe-field {
+    box-sizing: border-box;
+    width: 272px;
+  }
+  
+  .form-row:nth-child(n + 2) {
+    margin-top: 20px;
+  }
+  
+  .subscribe-button {
+    font-size: 14px;
+    line-height: 2.88;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  
+  .tags {
+    margin-bottom: 40px;
+  }
+  
+  .list-tags {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+  }
+  
+  .sidebar-tags-list {
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
+  
+  .tags-sidebar-link {
+    display: block;
+    border: 3px solid #eeeeee;
+    padding: 8px 14px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 12px;
+    color: #0f0d0e;
+  }
+  
+  /* content */
+  .post {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+  }
+  
+  .post:nth-child(n + 2) {
+    margin-top: 60px;
+  }
+  
+  .list-thems {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+  }
+  
+  .sidebar-thems-list {
+    margin-top: 14px;
+    padding-bottom: 14px;
+    border-bottom: 1px solid #eeeeee;
+  }
+  
+  .sidebar-thems-list:first-child {
+    padding-top: 0;
+  }
+  
+  .them-sidebar-link {
+    text-decoration: none;
+    color: #0f0d0e;
+    font-size: 14px;
+    font-weight: 700;
+  }
+  
+  .them-namber-sidebar {
+    color: #b59f5b;
+    font-size: 12px;
+    margin-left: 5px;
+    vertical-align: super;
+  }
+  
+  /*main*/
+  
+  .post-img-container {
+    margin-right: 30px;
+  }
+  
+  .post-img {
+    width: 380px;
+  }
+  
+  .post-tags {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    color: #b59f5b;
+  }
+  
+  .post-tags-item {
+    margin-right: 20px;
+  }
+  
+  .post-tags-item:last-child {
+    margin-right: 0px;
+  }
+  
+  .post-tag {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .post-title {
+    text-transform: uppercase;
+    color: #0f0d0e;
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 700;
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
+  
+  .post-title-link {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .post-meta {
+    font-size: 12px;
+  }
+  
+  .datetime {
+    line-height: normal;
+    color: #a9a9a9;
+    margin-right: 15px;
+    display: inline-block;
+  }
+  
+  .post-author {
+    font-weight: 700;
+    display: inline-block;
+    font-style: normal;
+  }
+  
+  .post-content {
+    font-size: 15px;
+    line-height: 1.46;
+  }
+  
+  /* footer */
+  
+  .footer {
+    margin-bottom: 40px;
+    margin-top: 65px;
+  }
+  
+  .social {
+    background-color: #f4f7f6;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 75px;
+  }
+  
+  .social-list {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    list-style: none;
+    justify-content: center;
+  }
+  
+  .social-item:nth-child(n + 2) {
+    margin-left: 30px;
+  }
+  
+  .social-item-link {
+    background-size: contain;
+    width: 25px;
+    height: 25px;
+    background-repeat: no-repeat;
+    display: block;
+  }
+  
+  .social-item-twitter {
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/004-twitter.svg);
+  }
+  
+  .social-item-pinterest {
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/001-pinterest.svg);
+  }
+  
+  .social-item-facebook {
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/002-facebook-logo.svg);
+  }
+  
+  .social-item-instagram {
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/005-instagram.svg);
+  }
+  
+  .social-item-tumblr {
+    background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg);
+  }
+  
+  .last-text {
+    text-align: center;
+    font-size: 12px;
+    color: #999999;
+  }
+  
+  .last-text-link {
+    color: inherit;
+    text-decoration: none;
+    font-weight: 700;
+  }
+  
