--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   font-style: normal;
   font-size: 15px;
   line-height: 1.46;
+  min-width: 320px;
 }
 
 .container {
@@ -115,6 +116,10 @@ body {
   width: 180px;
 }
 
+.logo-link {
+  text-decoration: none;
+}
+
 /*------------------------------------------------------*/
 .popup {
   width: 100%;
@@ -128,6 +133,10 @@ body {
   left: 0;
   display: flex;
   z-index: 999;
+}
+
+.none {
+  display: none
 }
 
 .popup-container {
@@ -199,13 +208,12 @@ body {
 
 
 .popup-email {
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .popup-email-radio {
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .popup-radio {
@@ -255,7 +263,7 @@ body {
 .popup-field-label,
 .popup-select-label {
   display: block;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .popup-field-textarea {
@@ -346,14 +354,13 @@ body {
 
 .trend-card {
   width: 25%;
-  height: 320px;
   box-sizing: border-box;
   background-color: #0f0d0e;
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 20px;
-  margin: 2px;
+  padding: 100px 25px;
+  margin-right: 2px;
   display: flex;
   align-items: flex-end;
   position: relative;
@@ -398,6 +405,7 @@ body {
   border: 3px solid #b59f5b;
   padding: 20px;
   z-index: 10;
+  width: 100%;
 }
 
 .trend-card-title {
@@ -874,7 +882,7 @@ body {
 
 /* footer */
 .footer {
-  margin-bottom: 40px;
+  padding-bottom: 40px;
   margin-top: 65px;
 }
 
@@ -951,12 +959,26 @@ body {
   .trend-container {
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
   }
 
 
+
   .trend-card {
-    width: calc(50% - 8px);
+    width: calc(50% - 2px);
+    padding: 75px 25px 15px;
+  }
+
+  .trend-card:nth-child(n+3) {
+    margin-top: 2px;
+  }
+
+  .trend-card:nth-child(2n+2) {
+    margin-right: 0;
+  }
+
+  .trend-card-content {
+    padding: 35px;
+    ;
   }
 
   .page-container {
@@ -1076,7 +1098,12 @@ body {
     background-color: #FFF;
     padding: 20px;
     margin-top: 20px;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+
   }
+
 
   li.nav-item {
     padding-bottom: 10px;
@@ -1129,9 +1156,13 @@ body {
 @media (max-width: 640px) {
 
   .trend-card {
-    width: calc(100%);
-    margin-left: 0;
+    width: 100%;
     margin-right: 0;
+    padding: 90px 15px 15px;
+  }
+
+  .trend-card:nth-child(n+2) {
+    margin-top: 2px;
   }
 
   .post-img-container {
@@ -1256,8 +1287,7 @@ body {
     }
 
     .trend-card {
-      width: calc(50% - 4px);
-      margin-left: 2px;
+      width: calc(50% - 2px);
       margin-right: 2px;
     }
   }
