--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,9 @@ body {
   vertical-align: middle;
 }
 
-
+.popup-radio:nth-last-child(1) {
+  margin-right: 0px;
+}
 
 .popup-radio-text::before {
   content: "";
@@ -276,7 +278,7 @@ body {
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 100%;
-  margin: 30px 0;
+  margin: 30px 0 0;
   line-height: 2.857;
   background-color: #b59f5b;
   color: #FFF;
@@ -684,6 +686,7 @@ body {
   font-size: 12px;
   margin-left: 5px;
   vertical-align: super;
+  font-weight: 700;
 }
 
 /*main*/
@@ -801,23 +804,30 @@ body {
   position: relative;
   padding: 24px;
   z-index: 3;
+  display: flex;
+  flex-direction: column;
 }
 
 .product-content {
   position: relative;
+  flex-grow: 1;
   z-index: 2;
 }
 
-.product-card::before {
+.product-content:before {
   content: "";
-  width: 100%;
   border: 3px solid #ceb487;
   position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  top: 195px;
+  bottom: -20px;
+  right: -20px;
+  left: -20px;
+  top: -20px;
   z-index: 1;
+}
+
+.product-button {
+  position: relative;
+  z-index: 10;
 }
 
 .product-card:nth-child(3n+2) {
@@ -843,6 +853,8 @@ body {
 
 .product-description {
   margin: 10px 0 20px 0;
+  position: relative;
+  z-index: 10;
 }
 
 .product-footer {
